2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* CodeGen.pm
	* GBoxed.xs
	* GError.xs
	* GObject.xs
	* GSignal.xs
	* GType.xs
	* GValue.xs
	* Glib.exports
	* Glib.xs
	* gperl.h
	* typemap: Rename gperl_sv_defined to gperl_sv_is_defined.

	* GBoxed.xs
	* GError.xs
	* GType.xs
	* gperl.h: Add new macros: gperl_sv_is_array_ref,
	gperl_sv_is_code_ref, and gperl_sv_is_hash_ref.

2008-01-07  muppet  <scott@asofyet.org>

	* GSignal.xs, t/signal_emission_hooks.t:  Bind and test
	g_signal_get_invocation_hint().

2007-12-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* gperl_marshal.h: Mention in the POD that
	dGPERL_CALLBACK_MARSHAL_SP should always come last in a list of
	declarations.

2007-12-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* gperl.h (SvGObject)
	* t/2.t: Use gperl_get_object_check instead of gperl_get_object so
	that inproper usage of Glib::Object methods results in an error
	message and not in a segfault.

	* CodeGen.pm (gen_boxed_stuff): Correctly cast the return value of
	the Sv$classname macros for boxed types so as to avoid handing out
	void* pointers.

2007-12-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.171.

2007-12-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>


	* GBookmarkFile.xs: Hush compiler warning.

	* CodeGen.pm
	* gperl.h
	* typemap: Replace the last occurences of SvOK with
	gperl_sv_defined.

2007-11-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.exports
	* Glib.xs
	* gperl.h: Add gperl_sv_defined, which checks an SV for
	definedness just like Perl's defined() does.

	* GBoxed.xs
	* GError.xs
	* GObject.xs
	* GSignal.xs
	* GType.xs
	* GValue.xs
	* Glib.xs: Use gperl_sv_defined instead of SvOK to check SVs for
	definedness.  This keeps Glib from erroneously thinking your
	scalars are undefined, for example when using tied hashes.

	* MANIFEST
	* t/tied_definedness.t: Test that values from tied hashes get
	through the definedness checks.
