@@ -18,6 +18,12 @@
 	* gperl.h: Add new macros: gperl_sv_is_array_ref,
 	gperl_sv_is_code_ref, and gperl_sv_is_hash_ref.
 
+	* GObject.xs (class_info_finish_loading): When handling a class'
+	@ISA, instead of simple av_fetch calls and a final av_clear, use
+	repeated av_shift calls.  Invoking av_clear on an @ISA array seems
+	to break the caching magic associated with it when running under
+	perl 5.10.0.  This in turn breaks our lazy-loading scheme.
+
 2008-01-07  muppet  <scott@asofyet.org>
 
 	* GSignal.xs, t/signal_emission_hooks.t:  Bind and test
